feature: vista de admin implementada